--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,12 +12,13 @@ ARG DATA_DIR="/var/lib/repomanager"
 ARG REPOS_DIR="/home/repo"
 ARG DEBIAN_FRONTEND=noninteractive
 ARG fqdn
+ARG max_upload_size
 
 # PACKAGES INSTALL
 
 # Install dependencies
 RUN apt-get update -y
-RUN apt-get install findutils git gnupg2 rpm librpmsign9 createrepo-c reprepro apt-utils curl ca-certificates apt-transport-https -y
+RUN apt-get install findutils git gnupg2 rpm librpmsign9 createrepo-c reprepro apt-utils curl ca-certificates apt-transport-https dnsutils -y
 
 # Install postfix
 RUN apt-get install postfix -y
@@ -38,11 +39,14 @@ RUN git clone https://github.com/lbr38/repomanager.git /tmp/repomanager
 # SERVICES CONFIG
 
 # Configure Nginx
+RUN cp /tmp/repomanager/docker/config/nginx/nginx.conf /etc/nginx/nginx.conf
 RUN cp /tmp/repomanager/docker/config/nginx/repomanager.conf /etc/nginx/sites-enabled/repomanager.conf
+RUN sed -i "s/__MAX_UPLOAD_SIZE__/$max_upload_size/g" /etc/nginx/sites-enabled/repomanager.conf
 RUN rm -rf /etc/nginx/sites-enabled/default /var/www/html
 
 # Configure PHP
 RUN cp /tmp/repomanager/docker/config/php/www.conf /etc/php/8.1/fpm/pool.d/www.conf
+RUN sed -i "s/^upload_max_filesize.*$/upload_max_filesize = $max_upload_size/g" /etc/php/8.1/fpm/php.ini
 
 # Configure Postfix
 RUN \cp /tmp/repomanager/docker/config/postfix/main.cf /etc/postfix/main.cf
@@ -53,6 +57,7 @@ RUN echo $fqdn > /etc/mailname
 RUN mkdir -p $WWW_DIR $DATA_DIR $REPOS_DIR
 RUN cp -r /tmp/repomanager/www/* $WWW_DIR/
 RUN touch $WWW_DIR/.docker
+RUN echo "$fqdn" > $WWW_DIR/.fqdn
 
 # Create repomanager group and set basic permissions
 RUN groupadd repomanager
@@ -62,6 +67,9 @@ RUN chown -R www-data:repomanager $WWW_DIR $DATA_DIR $REPOS_DIR
 # Copy entrypoint script
 RUN cp /tmp/repomanager/docker/entrypoint.sh /tmp/entrypoint.sh
 RUN chmod 700 /tmp/entrypoint.sh
+
+# Clean
+RUN rm -rf /tmp/repomanager
 
 # Expose port 8080
 EXPOSE 8080
