--- a/docker/config/nginx/repomanager.conf
+++ b/docker/config/nginx/repomanager.conf
@@ -13,14 +13,14 @@ upstream php-handler {
 
 server {
     # Set repomanager base directories variables
-    set $WWW_DIR '/var/www/repomanager'; # default is /var/www/repomanager
-    set $REPOS_DIR '/home/repo';         # default is /home/repo
+    set $WWW_DIR '/var/www/repomanager';        # default is /var/www/repomanager
+    set $REPOS_DIR '/home/repo';                # default is /home/repo
 
     listen 8080;
     server_name 127.0.0.1;
 
     # Path to log files
-    access_log /var/log/nginx/repomanager_access.log combined if=$loggable;
+    access_log /var/log/nginx/repomanager_access.log repomanager if=$loggable;
     error_log /var/log/nginx/repomanager_error.log;
 
     # Security headers
@@ -38,7 +38,7 @@ server {
 
     # Set a sufficient value if you intend to upload packages into repositories from the UI
     # php.ini also needs some limits to be increased
-    client_max_body_size 32M;
+    client_max_body_size __MAX_UPLOAD_SIZE__;
 
     # Path to repomanager root directory
     root $WWW_DIR/public;
