--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -4,7 +4,7 @@ version: "3"
 services:
   repomanager:
     container_name: repomanager-dev
-    image: repomanager-image
+    image: repomanager
     build:
       context: .
       dockerfile: Dockerfile
