--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -20,18 +20,39 @@ jobs:
         run: |
           echo "VERSION=$(cat ${GITHUB_WORKSPACE}/www/version)" >> $GITHUB_ENV
           echo "Version: ${{ env.VERSION }}"
-      
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to the container registry
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      
-      # Build the image with '$VERSION' and 'latest' tags
-      - name: Build the image
-        run: docker build . --file ./docker/Dockerfile --tag lbr38/repomanager:${{ env.VERSION }} --tag lbr38/repomanager:latest
 
-      - name: Push the image
-        run: |
-          docker push lbr38/repomanager:${{ env.VERSION }}
-          docker push lbr38/repomanager:latest
+      # Build the images
+      - name: Build and push docker
+        uses: docker/build-push-action@v2
+        with:
+          file: ./docker/Dockerfile
+          push: true
+          tags: lbr38/repomanager:latest, lbr38/repomanager:${{ env.VERSION }}
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+  
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+      #   with:
+      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      #     password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      
+      # # Build the image with '$VERSION' and 'latest' tags
+      # - name: Build the image
+      #   run: docker build . --file ./docker/Dockerfile --tag lbr38/repomanager:${{ env.VERSION }} --tag lbr38/repomanager:latest
+
+      # - name: Push the image
+      #   run: |
+      #     docker push lbr38/repomanager:${{ env.VERSION }}
+      #     docker push lbr38/repomanager:latest
