--- a/docker/config/nginx/repomanager.conf
+++ b/docker/config/nginx/repomanager.conf
@@ -120,5 +120,9 @@ server {
 
     location /repo {
         alias $REPOS_DIR;
+        # autoindex on;
+        # autoindex_exact_size off;
+        # autoindex_localtime on;
+        # autoindex_format html;
     }
 }
